--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,5 +1,7 @@
 .thumbnail {
-  height: 500px;
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
