--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -10,6 +10,9 @@
   flex-direction: column;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.landingFontColor{
   color: white;
 }
 
