--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -16,15 +16,20 @@
 }
 
 .register-container {
-  background: url('../../img/registerBg.jpg') no-repeat center center fixed;
+  background: url('../../img/registerBackground.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
 .registration {
-  background-color: rgba(255, 255, 255, 0.7);
-  color: black;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
   padding-top: 10vh;
-  padding-bottom: 20vh;
+  padding-bottom: 10vh;
+}
+
+.registrationTitle {
+  margin-top: 0;
+  margin-bottom: 15px;
 }
 
 .registerRow {
