--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -3,8 +3,8 @@
   background-size: cover;
 }
 .landing {
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 80px;
+  margin-right: 80px;
   height: 300px;
   display: flex;
   flex-direction: column;
@@ -26,4 +26,8 @@
   height: calc(100vh - 80px);
   text-align: center;
   margin-top: 15%;
+}
+
+.loginUsername {
+  margin-bottom: 5px;
 }
