--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -16,10 +16,11 @@
   margin-top: 0px;
 }
 .todo{
-  max-height: 350px;
+  height: 350px;
   overflow-y: scroll;
   margin-bottom: 0px;
   border-top: 1px solid #F0F0F0;
+  border-left: 1px solid #F0F0F0;
   border-radius: 3px;
   padding-bottom: 0px;
 }
@@ -27,5 +28,6 @@
   height: 50px;
 }
 .dashboardLower{
-  margin-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
