--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,34 +1,40 @@
-.landingContainer{
-  background: url('../../img/landingBg.jpg') no-repeat center center fixed;
+.body {
+  margin: 0;
+  height: 100%;
+  padding: 0;
+}
+
+
+
+.background {
+  height: 100vh;
+  margin: 0;
+  background: url('../../img/landing4.jpg') no-repeat center center fixed;
   background-size: cover;
-  
 }
+
 .landing {
-  margin-left: 80px;
-  margin-right: 80px;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.landingFontColor{
-  color: white;
-}
-
-.landingInput{
-  margin-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
   text-align: center;
-  border-radius: 5px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 25%;
 }
 
-.landingRow {
-  height: calc(100vh - 80px);
+.get-started {
+  padding-top: 15px;
+  background-color: rgba(255, 255, 255, 0.4);
   text-align: center;
-  margin-top: 15%;
+}
+.navbar-form {
+  padding-top: 6%;
+  height: 20em;
+  text-align: center;
+  color: #333333;
 }
 
-.loginUsername {
-  margin-bottom: 5px;
+
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
 }
