--- a/src/components/Nav1/Nav1.css
+++ b/src/components/Nav1/Nav1.css
@@ -1,14 +1,28 @@
-.nav-custom{
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-style: none;
-  border-radius: 0;
+.nav-container{
+  top: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.nav-custom a{
-  font-size: 20px;
+
+.nav-links {
+  padding-left: 50px;
+  padding-right: 50px;
+  border-right: solid;
+  border-width: thin;
+}
+
+.nav-links-1 {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.nav-links-1:hover {
+  text-decoration: underline;
 }
 
 .nav-links:hover {
   text-decoration: underline;
+}
+
+.navbar-brand{
+  font-size: 35px !important;
 }
