--- a/src/components/Nav2/Nav2.css
+++ b/src/components/Nav2/Nav2.css
@@ -1,7 +1,10 @@
 .nav-custom{
   position: relative;
   background-color: rgba(255, 255, 255, 0.9);
-
+  border-color: white;
+  margin: 0;
+  border-radius: 0;
+  padding-left: 20px;
 }
 .nav-custom a{
   font-size: 20px;
