--- a/src/components/Nav2/Nav2.css
+++ b/src/components/Nav2/Nav2.css
@@ -1,13 +1,33 @@
-.nav-custom{
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-color: white;
-  margin: 0;
+.nav-customs{
+  margin-top: 10px;
   border-radius: 0;
-  padding-left: 20px;
+  border-style: none;
+  bottom: 0;
+  padding-top: 10px;
+  background-color: white;
+  font-size: 20px;
 }
 .nav-custom a{
   font-size: 20px;
+}
+
+
+.nav-links {
+  padding-left: 50px;
+  padding-right: 50px;
+  border-right: solid;
+  border-width: thin;
+}
+
+.nav-links-1 {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.nav-links-1:hover {
+  text-decoration: underline;
+}
+.nav-links:hover {
+  text-decoration: underline;
 }
 
 .nav-links:hover {
