--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -5,15 +5,52 @@
 }
 
 .landing-title{
-  margin-top: 5%;
+  margin-top: 4%;
   text-align: center;
-  color: black;
+  color: white;
+  font-size: 10em;
+  font-family: 'Cabin Sketch';
+}
+
+.landing-title-2 {
+  text-align: center;
+  align-items: center;
+  margin-left: 30%;
+  margin-right: 30%;
+  font-size: 4em;
+  color: white;
+  font-family: 'Cabin Sketch';
+}
+
+.landing-list {
+  margin-left: 5%;
+  margin-right: 3%;
+  margin-top: 6%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+  color: white;
+}
+
+.landingFontColor {
+  color: white;
+}
+
+.landing-caption{
+  font-size: 25px;
+  font-family: 'Josefin Slab';
+}
+
+.landing-icons {
   font-size: 70px;
-  text-decoration: underline;
+  color: white;
+  text-align: center;
+  margin-left: 33%;
 }
 
 .background {
-  height: 100vh;
+  height: calc(100vh + 345px);
   margin: 0;
   background: url('../../img/landing4.jpg') no-repeat center center fixed;
   background-size: cover;
@@ -25,6 +62,7 @@
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 15%;
+  margin-bottom: 20%;
 }
 
 .get-started {
