--- a/src/components/Nav1/Nav1.css
+++ b/src/components/Nav1/Nav1.css
@@ -3,6 +3,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   border-style: none;
+  border-radius: 0px;
 }
 
 .nav-custom {
@@ -14,8 +15,11 @@
   background-color: white;
 }
 
-.navbar-brand {
-  padding-left: 40%;
+.navbar-brandss {
+  padding-left: 10%;
+  width: 1000%;
+  font-size: 40px;
+  font-family: 'Cabin Sketch'
 }
 
 .nav-links {
