--- a/src/components/Nav2/Nav2.css
+++ b/src/components/Nav2/Nav2.css
@@ -2,6 +2,7 @@
   margin-top: 10px;
   border-radius: 0;
   border-style: none;
+  border-radius: 0px;
   bottom: 0;
   padding-top: 10px;
   background-color: white;
@@ -12,11 +13,26 @@
 }
 
 
+.brand {
+  font-family: 'Cabin Sketch';
+  color: black;
+  font-size: 20px;
+  margin-left: 5%;
+}
+
+.brand-2 {
+  margin-left: 10px;
+  padding-right: 10%;
+  padding-bottom: 13px;
+}
+
+
 .nav-links {
   padding-left: 50px;
   padding-right: 50px;
   border-right: solid;
   border-width: thin;
+  color: black;
 }
 
 .nav-links-1 {
