--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -15,9 +15,7 @@
   height: 400px;
   padding-bottom: 30%;
 }
-.calendar-container{
-  margin-top: 2%;
-}
+
 .text-center{
   text-decoration: underline;
   padding: 0;
@@ -61,7 +59,7 @@
 .mini-container {
   width: 30%;
 }
-.jumbotron {
+.dashboard-jumbotron {
   text-align: center;
   background-image: url('../../img/waterfall.jpg');
   background-size: cover;
