--- a/src/components/Nav2/Nav2.css
+++ b/src/components/Nav2/Nav2.css
@@ -14,16 +14,17 @@
 
 
 .brand {
+  text-align: center;
   font-family: 'Cabin Sketch';
   color: black;
-  font-size: 20px;
+  font-size: 30px;
   margin-left: 5%;
+  width: 100%;
 }
 
 .brand-2 {
   margin-left: 10px;
   padding-right: 10%;
-  padding-bottom: 13px;
 }
 
 
