--- a/src/components/Profile/TripLog/Trips.css
+++ b/src/components/Profile/TripLog/Trips.css
@@ -5,9 +5,11 @@
 
 .saved-trip-logs {
   border-style: none;
-  margin-top: 25px;
+  margin-top: 5%;
   padding-left: 10px;
   overflow: hidden;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .saved-trips-edit-button {
@@ -17,4 +19,10 @@ margin-top: 10px;
 .trip-scroll {
   overflow: scroll;
   height: 300px;
+  border-style: solid;
+  border-color: #9A9A9A;
+}
+
+.saved-trips-title {
+  text-decoration: underline;
 }
