--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -5,11 +5,20 @@
 }
 
 .weather{
-  height: 200px;
+  height: 290px;
   margin-top: 1%;
   margin-left: 20%;
   margin-right: 20%;
   color: black;
+}
+.weather-data-container{
+  width: 100%;
+  height: 230px;
+  display: flex;
+  overflow-x: scroll;
+}
+.weather-list{
+  width: 100px;
 }
 .calendar{
   height: 400px;
