--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,7 +6,8 @@
   position:  relative;
   padding-top: 10px;
   background-color: white;
-  bottom: 0;
+  bottom: 0;y
+  
   width: 100%;
   border-top: solid;
   border-width: thin;
