--- a/src/components/Nav2/Nav2.css
+++ b/src/components/Nav2/Nav2.css
@@ -27,7 +27,7 @@
 }
 
 
-.nav-links {
+.nav2-links {
   padding-left: 50px;
   padding-right: 50px;
   border-right: solid;
@@ -35,7 +35,7 @@
   color: black;
 }
 
-.nav-links-1 {
+.nav2-links-1 {
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 10px;
